NEXT-637 - Fix the Integration list
NEXT-637 - Update the UI of the integration list

NEXT-637 - Update the UI of the integration list with new design

NEXT-637 - Update the listing UI

revert package-lock.json changes

NEXT-637 - Fixed the E2E test

NEXT-637 - Update E2E tests for new headline text

NEXT-637 - Fix Modal for E2E test

NEXT-637 - Fix text in E2E test for the new integration update

NEXT-637 - Fix text in E2E test for the new integration update #2

NEXT-637 - Fixes some naming conventions

NEXT-637 - Fixed a SCSS variable and add the styling for password fields without a toggle

NEXT-637 - Fixed a headline

NEXT-637 - Update package-lock.json

--- a/Resources/administration/src/app/component/base/sw-label/sw-label.scss
+++ b/Resources/administration/src/app/component/base/sw-label/sw-label.scss
@@ -88,6 +88,20 @@ $sw-label-warning-color-border: $color-pumpkin-spice;
         }
     }
 
+    &.sw-label--small {
+        font-size: 12px;
+        line-height: 12px ;
+        padding: 2px 5px;
+    }
+
+    &.sw-label--caps {
+        text-transform: uppercase;
+    }
+
+    &.sw-label--light {
+        color: lighten($sw-label-color-text, 10);
+    }
+
     &.sw-label--info {
         @include sw-label-variant($sw-label-info-color-background, $sw-label-info-color-text, $sw-label-info-color-border);
     }
