--- a/Resources/administration/src/app/assets/scss/directives/tooltip.scss
+++ b/Resources/administration/src/app/assets/scss/directives/tooltip.scss
@@ -14,6 +14,7 @@ $sw-tooltip-border-radius: $border-radius-default;
     padding: 12px 16px;
     font-size: 14px;
     word-wrap: break-word;
+    pointer-events: none;
 
     &:before {
         content: '';
