NEXT-1811 - Refactor grids and show more information in plugin list

--- a/Resources/administration/src/app/assets/scss/variables.scss
+++ b/Resources/administration/src/app/assets/scss/variables.scss
@@ -15,6 +15,7 @@ $color-gutenberg: #607182;
 $color-steam-cloud: #D8DDE6;
 $color-link-water: #FCFCFC;
 $color-light-gray: #F4F7FA;
+$color-gray: #9aa7be;
 $color-drag-select-box: rgba(0, 162, 255, .4);
 
 // Module colors
