--- a/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.html.twig
+++ b/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.html.twig
@@ -1,5 +1,5 @@
 {% block sw_plugin_manager %}
-<sw-page class="sw-plugin-list">
+<sw-page class="sw-plugin-manager">
     {% block sw_plugin_manager_search_bar %}
         <template slot="search-bar">
             <sw-search-bar :placeholder="$tc('sw-plugin.general.placeholderSearchBar')"
