--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.twig
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.twig
@@ -2,7 +2,7 @@
 <div class="sw-plugin-list">
 
     {% block sw_plugin_list_top_actions %}
-        <div class="top-actions">
+        <div class="sw-plugin-manager__top-actions">
             <h1>{{ $tc('sw-plugin.list.pluginHeader') }}</h1>
             <div class="sw-plugin-list__action">
                 {% block sw_plugin_list_sort %}
@@ -38,126 +38,131 @@
 
     {% block sw_plugin_list_content %}
     <sw-card :isLoading="isLoading">
-            {% block sw_plugin_list_grid %}
-            <sw-grid :items="plugins"
-                     :sortBy="sortBy"
-                     :sortDirection="sortDirection"
-                     :sidebar="true"
-                     :selectable="false"
-                     @sort-column="onSortColumn"
-                     slot="grid"
-                     table>
+        {% block sw_plugin_list_grid %}
+        <sw-grid v-show="isLoading || total"
+                 slot="grid"
+                 :items="plugins"
+                 :sortBy="sortBy"
+                 :sortDirection="sortDirection"
+                 :selectable="false"
+                 @sort-column="onSortColumn"
+                 table>
 
-                {% block sw_plugin_list_grid_slots %}
-                <template slot="columns" slot-scope="{ item }">
+            {% block sw_plugin_list_grid_slots %}
+            <template slot="columns" slot-scope="{ item }">
 
-                    {% block sw_plugin_list_grid_columns_customer_name %}
-                        <sw-grid-column flex="minmax(100px, 1fr)"
-                                        :label="$tc('sw-plugin.list.columnPluginName')"
-                                        dataIndex="label"
-                                        truncate
-                                        sortable>
-                            {% block sw_plugin_list_grid_columns_customer_name_label %}
-                                {{ item.label }}
-                            {% endblock %}
-                        </sw-grid-column>
+                {% block sw_plugin_list_grid_columns_customer_name %}
+                <sw-grid-column flex="minmax(100px, 1fr)"
+                                :label="$tc('sw-plugin.list.columnPluginName')"
+                                dataIndex="label"
+                                truncate
+                                sortable>
+                    {% block sw_plugin_list_grid_columns_customer_name_label %}
+                    <div class="sw-plugin-list__plugin-info-container">
+                        <img v-if="item.iconUrl" :src="item.iconUrl" />
+                        <div class="sw-plugin-list__plugin-info">
+                            <p>{{ item.label }}</p>
+                            <p class="sw-plugin-list__author-name">{{ item.author }}</p>
+                        </div>
+                    </div>
                     {% endblock %}
+                </sw-grid-column>
+                {% endblock %}
 
-                    {% block sw_plugin_list_grid_columns_version %}
-                        <sw-grid-column flex="minmax(80px, 100px)"
-                                        :label="$tc('sw-plugin.list.columnVersion')"
-                                        dataIndex="version"
-                                        truncate
-                                        sortable>
-                            {% block sw_plugin_list_grid_columns_version_label %}
-                                {{ item.version }}
-                            {% endblock %}
-                        </sw-grid-column>
-                    {% endblock %}
+                {% block sw_plugin_list_grid_columns_version %}
+                    <sw-grid-column flex="minmax(80px, 100px)"
+                                    :label="$tc('sw-plugin.list.columnVersion')"
+                                    dataIndex="version"
+                                    truncate
+                                    sortable>
+                        {% block sw_plugin_list_grid_columns_version_label %}
+                            {{ item.version }}
+                        {% endblock %}
+                    </sw-grid-column>
+                {% endblock %}
 
-                    {% block sw_plugin_list_grid_columns_activated %}
-                        <sw-grid-column flex="minmax(80px, 120px)"
-                                        :label="$tc('sw-plugin.list.columnActive')"
-                                        dataIndex="active"
-                                        truncate
-                                        sortable>
-                            {% block sw_plugin_list_grid_columns_activated_label %}
-                                <sw-icon name="small-default-checkmark-line-medium" small v-if="item.active"
-                                         class="is--active"></sw-icon>
-                                <sw-icon name="small-default-x-line-medium" small v-else
-                                         class="is--inactive"></sw-icon>
-                            {% endblock %}
-                        </sw-grid-column>
-                    {% endblock %}
+                {% block sw_plugin_list_grid_columns_activated %}
+                    <sw-grid-column flex="minmax(80px, 120px)"
+                                    :label="$tc('sw-plugin.list.columnActive')"
+                                    dataIndex="active"
+                                    truncate
+                                    sortable>
+                        {% block sw_plugin_list_grid_columns_activated_label %}
+                            <sw-icon name="small-default-checkmark-line-medium" small v-if="item.active"
+                                     class="is--active"></sw-icon>
+                            <sw-icon name="small-default-x-line-medium" small v-else
+                                     class="is--inactive"></sw-icon>
+                        {% endblock %}
+                    </sw-grid-column>
+                {% endblock %}
 
-                    {% block sw_plugin_list_grid_columns_actions %}
-                    <sw-grid-column flex="minmax(100px, 100px)"
-                                    align="center">
-                        {% block sw_plugin_list_grid_columns_actions_context_button %}
-                        <sw-context-button>
+                {% block sw_plugin_list_grid_columns_actions %}
+                <sw-grid-column flex="minmax(100px, 100px)"
+                                align="center">
+                    {% block sw_plugin_list_grid_columns_actions_context_button %}
+                    <sw-context-button>
 
-                            {% block sw_plugin_list_grid_columns_actions_install %}
-                                <sw-context-menu-item @click="onInstallPlugin(item)">
-                                {{ $tc('sw-plugin.list.contextInstall') }}
-                                </sw-context-menu-item>
-                                {% endblock %}
-
-                                {% block sw_plugin_list_grid_columns_actions_uninstall %}
-                                <sw-context-menu-item variant="danger" @click="onUninstallPlugin(item)">
-                                    {{ $tc('sw-plugin.list.contextUninstall') }}
-                                </sw-context-menu-item>
-                                {% endblock %}
-
-                                {% block sw_plugin_list_grid_columns_actions_activate %}
-                                <sw-context-menu-item @click="onActivatePlugin(item)">
-                                    {{ $tc('sw-plugin.list.contextActivate') }}
-                                </sw-context-menu-item>
-                                {% endblock %}
-
-                                {% block sw_plugin_list_grid_columns_actions_deactivate %}
-                                <sw-context-menu-item @click="onDeactivatePlugin(item)">
-                                    {{ $tc('sw-plugin.list.contextDeactivate') }}
-                                </sw-context-menu-item>
-                                {% endblock %}
-
-                                {% block sw_plugin_list_grid_columns_actions_update %}
-                                <sw-context-menu-item @click="onUpdatePlugin(item)">
-                                {{ $tc('sw-plugin.list.contextUpdate') }} {{ item.upgradeVersion }}
-                                </sw-context-menu-item>
-                            {% endblock %}
-
-                            {% block sw_plugin_list_grid_columns_actions_delete %}
-                            <sw-context-menu-item @click="onDeletePlugin(item)">
-                                {{ $tc('sw-plugin.list.contextDelete') }}
+                        {% block sw_plugin_list_grid_columns_actions_install %}
+                            <sw-context-menu-item @click="onInstallPlugin(item)">
+                            {{ $tc('sw-plugin.list.contextInstall') }}
                             </sw-context-menu-item>
                             {% endblock %}
 
-                        </sw-context-button>
-                        {% endblock %}
-                    </sw-grid-column>
-                    {% endblock %}
+                            {% block sw_plugin_list_grid_columns_actions_uninstall %}
+                            <sw-context-menu-item variant="danger" @click="onUninstallPlugin(item)">
+                                {{ $tc('sw-plugin.list.contextUninstall') }}
+                            </sw-context-menu-item>
+                            {% endblock %}
 
-                </template>
+                            {% block sw_plugin_list_grid_columns_actions_activate %}
+                            <sw-context-menu-item @click="onActivatePlugin(item)">
+                                {{ $tc('sw-plugin.list.contextActivate') }}
+                            </sw-context-menu-item>
+                            {% endblock %}
+
+                            {% block sw_plugin_list_grid_columns_actions_deactivate %}
+                            <sw-context-menu-item @click="onDeactivatePlugin(item)">
+                                {{ $tc('sw-plugin.list.contextDeactivate') }}
+                            </sw-context-menu-item>
+                            {% endblock %}
+
+                            {% block sw_plugin_list_grid_columns_actions_update %}
+                            <sw-context-menu-item @click="onUpdatePlugin(item)">
+                            {{ $tc('sw-plugin.list.contextUpdate') }} {{ item.upgradeVersion }}
+                            </sw-context-menu-item>
+                        {% endblock %}
+
+                        {% block sw_plugin_list_grid_columns_actions_delete %}
+                        <sw-context-menu-item @click="onDeletePlugin(item)">
+                            {{ $tc('sw-plugin.list.contextDelete') }}
+                        </sw-context-menu-item>
+                        {% endblock %}
+
+                    </sw-context-button>
+                    {% endblock %}
+                </sw-grid-column>
                 {% endblock %}
 
-                <template slot="pagination">
-                    {% block sw_plugin_list_grid_pagination %}
-                    <sw-pagination :page="page"
-                                   :limit="limit"
-                                   :total="total"
-                                   :total-visible="7"
-                                   @page-change="onPageChange">
-                    </sw-pagination>
-                    {% endblock %}
-                </template>
+            </template>
+            {% endblock %}
 
-            </sw-grid>
+            <template slot="pagination">
+                {% block sw_plugin_list_grid_pagination %}
+                <sw-pagination :page="page"
+                               :limit="limit"
+                               :total="total"
+                               :total-visible="7"
+                               @page-change="onPageChange">
+                </sw-pagination>
+                {% endblock %}
+            </template>
+
+        </sw-grid>
         {% endblock %}
 
         {% block sw_plugin_list_empty_state %}
-            <sw-empty-state v-if="!isLoading && !total"
-                            :title="$tc('sw-plugin.list.messageEmpty')">
-            </sw-empty-state>
+        <sw-empty-state v-if="!isLoading && !total"
+                        :title="$tc('sw-plugin.list.messageEmpty')"></sw-empty-state>
         {% endblock %}
     </sw-card>
     {% endblock %}
