--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-updates-list/sw-plugin-updates-list.twig
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-updates-list/sw-plugin-updates-list.twig
@@ -2,7 +2,7 @@
 <div class="sw-plugin-updates-list">
 
     {% block sw_plugin_updates_top_actions %}
-    <div class="top-actions">
+    <div class="sw-plugin-manager__top-actions">
         <h1>{{ $tc('sw-plugin.updates-list.updateHeader') }}</h1>
         <sw-button variant="ghost">
             {{ $tc('sw-plugin.updates-list.updateAllButton') }}
@@ -10,42 +10,40 @@
     </div>
     {% endblock %}
 
-    <sw-card>
-        {% block sw_plugin_updates_list_content %}
-        <sw-container slot="grid" type="row">
-            {% block sw_plugin_updates_list_grid %}
-            <sw-grid v-if="total || term"
-                     :items="updates"
-                     :selectable="false"
-                     :isFullpage="true"
-                     table>
+    <sw-card :isLoading="isLoading">
+        {% block sw_plugin_updates_list_grid %}
+        <sw-grid v-show="isLoading || total"
+                 :items="updates"
+                 :selectable="false"
+                 slot="grid"
+                 table>
 
-                {% block sw_plugin_updates_list_grid_slots %}
-                <template slot="columns" slot-scope="{ item }">
+            {% block sw_plugin_updates_list_grid_slots %}
+            <template slot="columns" slot-scope="{ item }">
 
-                    {% block sw_plugin_updates_list_grid_columns_id %}
+                {% block sw_plugin_updates_list_grid_columns_id %}
+                <sw-grid-column flex="minmax(100px, 1fr)"
+                                :label="$tc('sw-plugin.list.columnPlugin')"
+                                dataIndex="name"
+                                truncate
+                                sortable>
+                    {% block sw_plugin_updates_list_grid_columns_id_label %}
+                    {{ item.name }}
+                    {% endblock %}
+                </sw-grid-column>
+                {% endblock %}
+
+                {% block sw_plugin_updates_list_grid_columns_name %}
                     <sw-grid-column flex="minmax(100px, 1fr)"
-                                    :label="$tc('sw-plugin.list.columnPlugin')"
-                                    dataIndex="name"
+                                    :label="$tc('sw-plugin.list.columnChangelog')"
+                                    dataIndex="changelog"
                                     truncate
                                     sortable>
-                        {% block sw_plugin_updates_list_grid_columns_id_label %}
-                        {{ item.name }}
+                        {% block sw_plugin_updates_list_grid_columns_name_label %}
+                            {{ item.changelog }}
                         {% endblock %}
                     </sw-grid-column>
-                    {% endblock %}
-
-                    {% block sw_plugin_updates_list_grid_columns_name %}
-                        <sw-grid-column flex="minmax(100px, 1fr)"
-                                        :label="$tc('sw-plugin.list.columnChangelog')"
-                                        dataIndex="changelog"
-                                        truncate
-                                        sortable>
-                            {% block sw_plugin_updates_list_grid_columns_name_label %}
-                                {{ item.changelog }}
-                            {% endblock %}
-                        </sw-grid-column>
-                    {% endblock %}
+                {% endblock %}
 
                     {% block sw_plugin_updates_list_grid_columns_action %}
                         <sw-grid-column flex="minmax(100px, 0.5fr)"
@@ -61,102 +59,79 @@
                         </sw-grid-column>
                     {% endblock %}
 
-                </template>
-                {% endblock %}
-
-                <template slot="pagination">
-                    {% block sw_plugin_updates_list_grid_pagination %}
-                        <sw-pagination :page="page"
-                                       :limit="limit"
-                                       :total="total"
-                                       :total-visible="7"
-                                       @page-change="onPageChange">
-                        </sw-pagination>
-                    {% endblock %}
-                </template>
-            </sw-grid>
+            </template>
             {% endblock %}
 
-            {% block sw_plugin_updates_list_empty_state %}
-                <sw-empty-state v-else-if="!isLoading && !total"
-                                :title="$tc('sw-plugin.updates-list.messageEmpty')"></sw-empty-state>
-            {% endblock %}
+        </sw-grid>
+        {% endblock %}
 
-            {% block sw_plugin_updates_list_grid_loader %}
-                <sw-loader v-if="isLoading"></sw-loader>
-            {% endblock %}
-        </sw-container>
+        {% block sw_plugin_updates_list_empty_state %}
+            <sw-empty-state v-if="!isLoading && !total"
+                            :title="$tc('sw-plugin.updates-list.messageEmpty')"></sw-empty-state>
         {% endblock %}
     </sw-card>
 
     {% block sw_plugin_updates_top_action_last_updates %}
-    <div class="top-actions">
+    <div class="sw-plugin-manager__top-actions">
         <h1> {{ $tc('sw-plugin.updates-list.lastUpdatesHeader') }}</h1>
     </div>
     {% endblock %}
 
-    <sw-card>
-        {% block sw_plugin_last_updates_list_content %}
-        <sw-container slot="grid" type="row">
-            {% block sw_plugin_last_updates_list_grid %}
-            <sw-grid v-if="total || term"
-                     :items="updates"
-                     :selectable="false"
-                     :isFullpage="true"
-                     table>
+    <sw-card :isLoading="isLoading" class="sw-card--grid">
+        {% block sw_plugin_last_updates_list_grid %}
+        <sw-grid v-show="isLoading || total"
+                 :items="updates"
+                 :selectable="false"
+                 slot="grid"
+                 table>
 
-                {% block sw_plugin_last_updates_list_grid_slots %}
-                <template slot="columns" slot-scope="{ item }">
+            {% block sw_plugin_last_updates_list_grid_slots %}
+            <template slot="columns" slot-scope="{ item }">
 
-                    {% block sw_plugin_last_updates_list_grid_columns_id %}
-                    <sw-grid-column flex="minmax(100px, 1fr)"
-                                    :label="$tc('sw-plugin.list.columnPlugin')"
-                                    dataIndex="name"
-                                    truncate
-                                    sortable>
-                        {% block sw_plugin_last_updates_list_grid_columns_id_label %}
-                        {{ item.name }}
-                        {% endblock %}
-                    </sw-grid-column>
+                {% block sw_plugin_last_updates_list_grid_columns_id %}
+                <sw-grid-column flex="minmax(100px, 1fr)"
+                                :label="$tc('sw-plugin.list.columnPlugin')"
+                                dataIndex="name"
+                                truncate
+                                sortable>
+                    {% block sw_plugin_last_updates_list_grid_columns_id_label %}
+                    {{ item.name }}
                     {% endblock %}
-
-                    {% block sw_plugin_last_updates_list_grid_columns_name %}
-                        <sw-grid-column flex="minmax(100px, 1fr)"
-                                        :label="$tc('sw-plugin.list.columnChangelog')"
-                                        dataIndex="changelog"
-                                        truncate
-                                        sortable>
-                            {% block sw_plugin_last_updates_list_grid_columns_name_label %}
-                                {{ item.changelog }}
-                            {% endblock %}
-                        </sw-grid-column>
-                    {% endblock %}
-
-                    {% block sw_plugin_last_updates_list_grid_columns_action %}
-                        <sw-grid-column flex="minmax(100px, 0.5fr)"
-                                        align="center">
-                            {% block sw_plugin_last_updates_list_grid_columns_update_button %}
-                                <p class="version">{{ $tc('sw-plugin.general.version') }} {{ item.highestVersion }}</p>
-                            {% endblock %}
-                        </sw-grid-column>
-                    {% endblock %}
-
-                </template>
+                </sw-grid-column>
                 {% endblock %}
 
-            </sw-grid>
+                {% block sw_plugin_last_updates_list_grid_columns_name %}
+                    <sw-grid-column flex="minmax(100px, 1fr)"
+                                    :label="$tc('sw-plugin.list.columnChangelog')"
+                                    dataIndex="changelog"
+                                    truncate
+                                    sortable>
+                        {% block sw_plugin_last_updates_list_grid_columns_name_label %}
+                            {{ item.changelog }}
+                        {% endblock %}
+                    </sw-grid-column>
+                {% endblock %}
+
+                {% block sw_plugin_last_updates_list_grid_columns_action %}
+                    <sw-grid-column flex="minmax(100px, 0.5fr)"
+                                    align="center">
+                        {% block sw_plugin_last_updates_list_grid_columns_update_button %}
+                            <p class="version">{{ $tc('sw-plugin.general.version') }} {{ item.highestVersion }}</p>
+                        {% endblock %}
+                    </sw-grid-column>
+                {% endblock %}
+
+            </template>
             {% endblock %}
 
-            {% block sw_plugin_updates_list_empty_state %}
-                <sw-empty-state v-else-if="!isLoading && !total"
-                                :title="$tc('sw-plugin.updates-list.messageEmpty')"></sw-empty-state>
-            {% endblock %}
-
-            {% block sw_plugin_updates_list_grid_loader %}
-                <sw-loader v-if="isLoading"></sw-loader>
-            {% endblock %}
-        </sw-container>
+        </sw-grid>
         {% endblock %}
+
+        {% block sw_plugin_updates_list_empty_state %}
+            <sw-empty-state v-if="!isLoading && !total"
+                            :title="$tc('sw-plugin.updates-list.messageEmpty')"></sw-empty-state>
+        {% endblock %}
+
     </sw-card>
 
 </div>
