NEXT-1775 - Fix media-replace modal and added translation

--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
@@ -55,11 +55,11 @@
                     <div class="sw-media-upload__dropzone" ref="dropzone" :class="isDragActiveClass">
 
                         <template v-if="showPreview">
-                            <template v-if="source">
+                            <template v-if="source || preview">
                                 {% block sw_media_upload_regular_preview_file %}
                                     <sw-media-preview
                                         class="sw-media-upload__preview"
-                                        :source="source">
+                                        :source="source || preview">
                                     </sw-media-preview>
                                 {% endblock %}
                             </template>
