--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
@@ -2,14 +2,13 @@
 <div class="sw-condition-base" :class="[conditionClass, { 'has--error': hasErrors }]">
     <div class="sw-condition-base__container">
         {% block sw_condition_field_condition %}
-            <sw-select name="type"
-                       id="createId()"
-                       itemValueKey="name"
+            <sw-select :id="createId()"
+                       itemValueKey="type"
                        displayName="label"
                        :store="conditionStore"
                        v-model="condition.type"
                        :required="true"
-                       class="field field--select field--condition is--first"
+                       class="field--condition"
                        :title="$tc(getLabel(condition.type))"
                        @input="conditionChanged">
             </sw-select>
@@ -17,7 +16,7 @@
 
         {% block sw_condition_fields %}
             <slot name="condition-fields">
-                <sw-field type="text" class="field field--main"
+                <sw-field type="text" class="field--main"
                           :placeholder="$tc('global.sw-condition.condition.placeholder-warning')"
                           :disabled="true">
                 </sw-field>
