--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-country/sw-condition-billing-country.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-country/sw-condition-billing-country.html.twig
@@ -1,21 +1,15 @@
 {% block sw_condition_fields %}
     {% block sw_condition_fields_operator %}
-        <sw-select name="operator"
-                   id="createId()"
-                   itemValueKey="identifier"
-                   displayName="label"
-                   :store="operators"
-                   :required="true"
-                   v-model="condition.value.operator"
-                   class="field field--select has--arrow">
-        </sw-select>
+        <sw-condition-operator-select operatorSetName="multiStore"
+                                      v-model="condition.value.operator">
+        </sw-condition-operator-select>
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-condition-value multi
                             :id="condition.id"
                             name="countryIds"
                             :store="getCountryStore()"
-                            class="field field--main field--multi"
+                            class="field--main field--multi"
                             v-model="condition.value.countryIds">
         </sw-condition-value>
     {% endblock %}
