--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-street/sw-condition-billing-street.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-billing-street/sw-condition-billing-street.html.twig
@@ -1,17 +1,11 @@
 {% block sw_condition_fields %}
     {% block sw_condition_fields_operator %}
-        <sw-select name="operator"
-                   id="createId()"
-                   itemValueKey="identifier"
-                   displayName="label"
-                   :store="operators"
-                   :required="true"
-                   v-model="condition.value.operator"
-                   class="field field--select has--arrow">
-        </sw-select>
+        <sw-condition-operator-select operatorSetName="string"
+                                      v-model="condition.value.operator">
+        </sw-condition-operator-select>
     {% endblock %}
     {% block sw_condition_fields_value %}
-        <sw-field class="field field--main"
+        <sw-field class="field--main"
                   name="streetName"
                   v-model="condition.value.streetName">
         </sw-field>
