--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-currency/sw-condition-currency.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-currency/sw-condition-currency.html.twig
@@ -1,14 +1,8 @@
 {% block sw_condition_fields %}
     {% block sw_condition_fields_operator %}
-        <sw-select name="operator"
-                   id="createId()"
-                   itemValueKey="identifier"
-                   displayName="label"
-                   :store="operators"
-                   :required="true"
-                   v-model="condition.value.operator"
-                   class="field field--select has--arrow">
-        </sw-select>
+        <sw-condition-operator-select operatorSetName="multiStore"
+                                      v-model="condition.value.operator">
+        </sw-condition-operator-select>
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-condition-value :id="condition.id"
