--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-is-new-customer/sw-condition-is-new-customer.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-is-new-customer/sw-condition-is-new-customer.html.twig
@@ -1,7 +1,7 @@
 {% block sw_condition_fields %}
     {% block sw_condition_fields_value %}
         <sw-select name="operator"
-                   id="createId()"
+                   :id="createId()"
                    itemValueKey="value"
                    displayName="label"
                    :store="selectValues"
