--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
@@ -9,15 +9,9 @@
         </sw-select>
     {% endblock %}
     {% block sw_condition_fields_operator %}
-        <sw-select name="operator"
-                   id="createId()"
-                   itemValueKey="identifier"
-                   displayName="label"
-                   :store="operators"
-                   :required="true"
-                   v-model="condition.value.operator"
-                   class="field field--select has--arrow">
-        </sw-select>
+        <sw-condition-operator-select operatorSetName="number"
+                                      v-model="condition.value.operator">
+        </sw-condition-operator-select>
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-field type="number"
