--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -48,6 +48,7 @@
                     :isLoading="isLoading"
                     @sw-category-view-on-set-media="setMediaItem"
                     @sw-category-view-on-upload-media="onUploadAdded"
+                    @sw-category-view-on-remove-media="onUnlinkLogo"
                 ></sw-category-view>
             {% endblock %}
 
